# fair_sharer

./: LICENSE  fairsharer.py  pyproject.toml
.github/: FETCH_HEAD  config  index  packed-refs
.github/logs/: HEAD
.github/logs/refs/remotes/origin/: HEAD  main
.github/objects/pack/: pack-97ad8addcd51ffc4f75cacb7ef887b6c0c24d707.idx  pack-97ad8addcd51ffc4f75cacb7ef887b6c0c24d707.pack  pack-97ad8addcd51ffc4f75cacb7ef887b6c0c24d707.rev
.github/refs/remotes/origin/: main
.github/workflows/: ci.yml
tests/: test_fairshare.py
