[project]
name = "fairsharer"
version = "0.1.0"
description = "A small project to distribute values fairly over time"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
